# cogency

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  cogency_product_requirement_document.md  package.json  pnpm-lock.yaml  pyproject.toml  ruff.toml
aops/: case_manager.md  refund_under_500.md
aops/knowledge/: refund_policy.md
apps/api/: pyproject.toml
apps/api/app/: config.py  deps.py  logging.py  main.py
apps/api/app/routes/: aops.py  cases.py  evals.py  health.py  inbox.py  knowledge.py  salesforce.py
apps/api/tests/: test_health.py
apps/web/: eslint.config.mjs  next-env.d.ts  next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/aops/: page.tsx
apps/web/app/cases/: page.tsx
apps/web/app/cases/[id]/: page.tsx  run-aop-button.tsx
apps/web/app/evals/: page.tsx
apps/web/app/evals/[id]/: page.tsx
apps/web/app/inbox/: inbox-actions.tsx  page.tsx
apps/web/app/runs/: page.tsx
apps/web/app/runs/[id]/: page.tsx
apps/web/components/: auto-refresh.tsx  sidebar.tsx  sync-pill.tsx
apps/web/components/ui/: badge.tsx  button.tsx  card.tsx  empty.tsx  table.tsx
apps/web/lib/: api.ts  format.ts
apps/worker/: pyproject.toml
apps/worker/tests/: test_cdc_mapper.py
apps/worker/worker/: config.py  main.py
apps/worker/worker/activities/: __init__.py  aop_run.py  cdc.py  eval.py  health.py  sf_backfill.py
apps/worker/worker/sf/: __init__.py  factory.py
apps/worker/worker/workflows/: __init__.py  aop_run.py  cdc.py  eval.py  health.py  sf_backfill.py
db/: alembic.ini
db/migrations/: env.py
db/migrations/versions/: 0001_initial_sf_mirror.py  0002_seed_dev_tenant.py  0003_extend_sf_mirror.py  0004_knowledge.py  0005_evals.py
infra/: render.yaml
infra/docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
scripts/: backfill_cases.py  dev.sh  gen_pubsub_proto.sh  ingest_knowledge.py  seed_demo_cases.py  seed_golden_dataset.py
