[project]
name = "cogency"
version = "0.0.1"
description = "Standalone agentic case management platform on top of Salesforce Service Cloud"
requires-python = ">=3.12"
authors = [{ name = "Cogency", email = "eng@cogency.dev" }]

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/worker",
    "packages/db",
    "packages/salesforce",
    "packages/schemas",
    "packages/aop",
    "packages/agents",
    "packages/tools",
    "packages/prompts",
    "packages/guardrails",
    "packages/evals",
]

[tool.uv.sources]
cogency-db = { workspace = true }
cogency-salesforce = { workspace = true }
cogency-schemas = { workspace = true }
cogency-aop = { workspace = true }
cogency-agents = { workspace = true }
cogency-tools = { workspace = true }
cogency-prompts = { workspace = true }
cogency-guardrails = { workspace = true }
cogency-evals = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]
