[project]
name = "cogency-api"
version = "0.0.1"
description = "Cogency FastAPI service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "python-multipart>=0.0.12",
    "structlog>=24.4",
    "openai>=1.50",
    "anthropic>=0.40",
    "temporalio>=1.7",
    "langfuse>=2.50",
    "cogency-db",
    "cogency-salesforce",
    "cogency-schemas",
    "cogency-aop",
    "cogency-agents",
    "cogency-tools",
    "cogency-guardrails",
    "cogency-rag",
    "cogency-evals",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
