[project]
name = "cogency-worker"
version = "0.0.1"
description = "Cogency Temporal worker"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.7",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
    "httpx>=0.27",
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.29",
    "openai>=1.50",
    "anthropic>=0.40",
    "cogency-db",
    "cogency-salesforce",
    "cogency-schemas",
    "cogency-aop",
    "cogency-agents",
    "cogency-tools",
    "cogency-guardrails",
    "cogency-evals",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]
